--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="text_share">Share using</string>
     
     <string name="dictionary_setting">Configure Dictionary</string>
-    <string name="dictionary_setting_summary">Choose how to display the definition</string>
+    <string name="dictionary_setting_summary">Needs a reboot to take effect</string>
     <string name="test_dict">Select this to test</string>
     <string name="browser">Browser</string>
     <string name="popup">Pop-up</string>
