--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,8 +17,13 @@
     <string name="test">Test</string>
     <string name="test_box">Select any word from this line</string>
     
+    
     <string name="browser">Browser</string>
     <string name="popup">Pop-up</string>
     <string name="toast">Toast</string>
+    
+    <string name="toast1">3 Seconds</string>
+    <string name="toast2">6 Seconds</string>
+    <string name="toast3">10 Seconds</string>
 
 </resources>
