--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,8 +11,8 @@
     
     <string name="define">Define</string>
     <string name="define_display">Display</string>
-    <string name="define_display_summary">Needs a reboot to take effect</string>
     <string name="define_toast">Toast Duration</string>
+    <string name="summary">Needs a reboot</string>
     
     <string name="test">Test</string>
     <string name="test_box">Select any word from this line</string>
